# my_wc

./: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Counter.cpp  Counter.h  Flags.h  InputSource.cpp  InputSource.h  Printer.cpp  Printer.h  ProgramInput.cpp  ProgramInput.h  ProgramOutput.cpp  ProgramOutput.h  README.md  RunOptions.cpp  RunOptions.h  StatsPrinter.cpp  StatsPrinter.h  StreamCounter.cpp  StreamCounter.h  main.cpp  nonutf.txt  output.txt
tests/: locale.txt  test.zsh  whitespace.txt
